2007-08-17  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: Remove extraneous {} from entry for 'set timestamp'.

2007-08-12  Ethan Merritt  <merritt@u.washington.edu>

	* src/color.c (cbtick_callback)
	src/graph3d.c (xtick_callback ytick_callback ztick_callback)
	src/graphics.c (xtick2d_callback ytick2d_callback):
	The callback routines were testing for TC_DEFAULT in the wrong field
	(colorspec.lt instead of colorspec.type).
	Bug #1771240

	* demo/electron.dem:  Remove the "offset command", which is buggy, and
	use a consistent x axis.  Still need to fix the bug in offset, however.
	Bug #1744139

2007-08-06  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/x11.trm (X11_text): Fix conditionally missing {.

2007-08-04  Ethan Merritt  <merritt@u.washington.edu>

	* Tagged using command
		cvs tag -c "Release_4_2_1-pre1"

	* PATCHLEVEL src/version.c configure.in:
	Increment version to Version 4.2.1

	* docs/gnuplot.doc docs/gnuplot.texi:  Revert leakage from 
	cvs branch (4.3) documentation into 4.2 documentation. In 
	particular, 4.2 does not support transparency or iteration.

	* Makefile.am: Remove reference to obsolete README.exp

	* missing:  Nobody "really needs" makeinfo.  Allow installs without it.

2007-08-04  Matthias Habl  <mhabl@users.sourceforge.net>

	* configure.in: Allow to configure from inside an emacs script.
	Bug #1741156

2007-08-02  Ethan Merritt  <merritt@u.washington.edu>

	* src/command.c (read_line): Treat line extension consistently
	for both interactive and non-interactive input paths. This is 
	Timothee Lecomte's version of the fix.
	Bug #1753069.

2007-07-27  Dietmar Warning  <dietmar.warning@arcor.de>

	* term/win.c (WIN_enhanced_open): Avoid compiler warning.

2007-07-24  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot.doc: Fixed misprint in "3 multi-branch".

2007-07-24  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/win.trm: Document reading of wgnuplot.ini in user's %APPDATA%
	directory.
