@@ -1,3 +1,12 @@
+2007-08-20  Timothee Lecomte  <timothee.lecomte@ens.fr>
+
+        * src/wxterminal/gp_cairo.c (gp_cairo_fill_pattern): Do not use
+        negative coordinates to create hash patterns. This gives corruption
+        with recent cairo versions (1.4.10 for example). Instead create them
+        with rotations and scaling.
+        Also scale the linewidth of the patterns with PATTERN_SIZE instead
+        of its inverse.
+
 2007-08-17  Ethan Merritt  <merritt@u.washington.edu>
 
 	* docs/gnuplot.doc: Remove extraneous {} from entry for 'set timestamp'.
